--- a/RESUME.HTML
+++ b/RESUME.HTML
@@ -94,7 +94,7 @@
         <h2>Skills</h2>
         <table>
             <tr>
-                <td>Programming Languages: Python,html,java,c</td>
+                <td>Programming Languages:</td>
                 <td>
                     <img src="https://cdn-icons-png.flaticon.com/512/5968/5968350.png" alt="Python" width="40" height="40">
                     <img src="https://cdn-icons-png.flaticon.com/512/5968/5968282.png" alt="Java" width="40" height="40">
@@ -103,13 +103,13 @@
                 </td>
             </tr>
             <tr>
-                <td>Databases:  MySQL</td>
+                <td>Databases:</td>
                 <td>
                     <img src="https://cdn-icons-png.flaticon.com/512/919/919836.png" alt="MySQL" width="40" height="40">
                 </td>
             </tr>
             <tr>
-                <td>Software & Tools:  word,Excel,PowerPoint,PowerBI</td>
+                <td>Software & Tools:</td>
                 <td>
                     <img src="https://cdn-icons-png.flaticon.com/512/732/732221.png" alt="Word" width="40" height="40">
                     <img src="https://cdn-icons-png.flaticon.com/512/732/732273.png" alt="Excel" width="40" height="40">
@@ -118,7 +118,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Version Control: git,github</td>
+                <td>Version Control:</td>
                 <td>
                     <img src="https://cdn-icons-png.flaticon.com/512/2111/2111288.png" alt="Git" width="40" height="40">
                     <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" width="40" height="40">
